<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Escolha_Moeda">



<View
android:id="@+id/cabecalho"
android:layout_width="match_parent"
android:layout_height="95dp"
android:background="@drawable/cabecalho"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="1.0"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent" />

<ImageView
android:id="@+id/imageView"
android:layout_width="90dp"
android:layout_height="70dp"
android:layout_marginStart="16dp"
android:layout_marginTop="24dp"
android:src="@drawable/moeda_troca"
app:layout_constraintStart_toStartOf="@+id/cabecalho"
app:layout_constraintTop_toTopOf="@+id/cabecalho" />

    <ImageView
        android:id="@+id/logo_converspor"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/trocamoeda"
        app:layout_constraintBottom_toTopOf="@+id/bt_DM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cabecalho" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_DM"
        style="@style/Button_escolha"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="3dp"
        android:onClick="DM_tela_calculo"
        android:src="@drawable/trocamoeda"
        android:text="@string/DM"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/bt_DE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_converspor" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_DE"
        style="@style/Button_escolha"
        android:layout_marginStart="60dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="3dp"
        android:onClick="DE_tela_calculo"
        android:src="@drawable/trocamoeda"
        android:text="@string/DE"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/bt_DL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_DM" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_DL"
        style="@style/Button_escolha"
        android:layout_marginStart="60dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="3dp"
        android:onClick="DL_tela_calculo"
        android:src="@drawable/trocamoeda"
        android:text="@string/DL"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/bt_DR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_DE" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_DR"
        style="@style/Button_escolha"
        android:layout_marginStart="60dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="3dp"
        android:onClick="DR_tela_calculo"
        android:src="@drawable/trocamoeda"
        android:text="@string/DR"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/bt_EM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_DL" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_EM"
        style="@style/Button_escolha"
        android:layout_marginStart="60dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="3dp"
        android:onClick="EM_tela_calculo"
        android:src="@drawable/trocamoeda"
        android:text="@string/EM"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/bt_ED"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_DR" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_ED"
        style="@style/Button_escolha"
        android:layout_marginStart="60dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="3dp"
        android:onClick="ED_tela_calculo"
        android:src="@drawable/trocamoeda"
        android:text="@string/ED"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/bt_ER"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_EM" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_EL"
        style="@style/Button_escolha"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="8dp"
        android:onClick="EL_tela_calculo"
        android:src="@drawable/trocamoeda"
        android:text="@string/EL"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/bt_MAIS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_ER" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_ER"
        style="@style/Button_escolha"
        android:layout_marginStart="60dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="3dp"
        android:onClick="ER_tela_calculo"
        android:src="@drawable/trocamoeda"
        android:text="@string/ER"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/bt_EL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_ED" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_MAIS"
        style="@style/Button_escolha"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="32dp"
        android:onClick="Mais_Moeda"
        android:src="@drawable/trocamoeda"
        android:text="@string/Mais_Moedas"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_EL"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>